# optional-dependencies-all

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/optional_dependencies_all/: __main__.py
